--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
     "@antv/f2": "^3.7.7",
+    "@antv/g2": "^4.0.15",
     "@types/echarts": "^4.9.2",
     "@umijs/plugin-esbuild": "^1.0.1",
     "@umijs/plugin-sass": "^1.1.1",
