--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "echarts": "^4.9.0",
     "file-saver": "^2.0.2",
     "http-server": "^0.12.3",
+    "localforage": "^1.9.0",
     "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-codemirror2": "^7.2.1",
